--- a/usage_example.ipynb
+++ b/usage_example.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -256,8 +256,6 @@
       "Post 3:\n",
       "7 Tips to Help You Find the Best IT Talent\n",
       "\n",
-      "7 Tips to Help You Find the Best IT Talent \n",
-      "\n",
       "Finding the right IT talent can be a challenge, but it doesn't have to be. Here are 7 tips that can help you find the best IT talent: \n",
       "\n",
       "1. Define your needs: Before you start your search, make sure you know exactly what you need. Are you looking for a specific type of IT talent? Are there any qualifications or certifications required? Defining your needs upfront will help you find the right fit. \n",
@@ -297,11 +295,12 @@
     "    next_is_header = False\n",
     "    header, body = \"\", \"\"\n",
     "    for j, line in enumerate(r.json()['response'].strip().split('\\n')):\n",
-    "        if j == 0:\n",
+    "        if j == 0 and 'Heading' not in line:\n",
     "            next_is_header = True\n",
     "        if next_is_header:\n",
     "            header = line.strip()\n",
     "            next_is_header = False\n",
+    "            continue\n",
     "        if not line.strip():\n",
     "            continue\n",
     "\n",
