Add illustration generation

--- a/usage_example.ipynb
+++ b/usage_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -291,6 +291,7 @@
    ],
    "source": [
     "posts = []\n",
+    "post_data = []\n",
     "for i, r in enumerate(resps):\n",
     "    next_is_header = False\n",
     "    header, body = \"\", \"\"\n",
@@ -315,7 +316,20 @@
     "\n",
     "    header = header.strip(\" \\n\").strip('\"')\n",
     "    posts.append(f'Post {i}:\\n{header}\\n\\n{body.strip()}')\n",
+    "    post_data.append((header, body.strip()))\n",
     "print(*posts, sep='\\n\\n\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = []\n",
+    "for h, b in post_data:\n",
+    "    im_resp = requests.post(\"http://localhost:5000/gen_image\", json={\"topic\": h})\n",
+    "    images.append((h, b, im_resp.json()['response']))\n"
    ]
   },
   {
@@ -324,8 +338,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: generate post illustration?"
+    "images"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
