--- a/usage_example.ipynb
+++ b/usage_example.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,11 +334,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('How to Become a Successful IT Recruiter',\n",
+       "  \"Becoming a successful IT recruiter requires a combination of technical knowledge, soft skills, and a passion for connecting people with the right job opportunities. Here are some tips to help you become an effective IT recruiter:\\n1. Get to know the IT industry: It's important to have a good understanding of the IT industry, its trends, and the different roles and technologies within it. This will help you identify the right candidates and make sure they match the requirements of the job. \\n\\n2. Build relationships: Building relationships with IT professionals will help you understand their skills, experiences, and career goals. This will help you find the right candidate for the job and make sure they are a good fit for the company.\\n\\n3. Develop sourcing strategies: Developing effective sourcing strategies is essential to finding the right candidates. This includes using multiple channels such as job boards, social media, and networking events.\\n\\n4. Master communication skills: Being able to communicate effectively with IT professionals is essential for successful recruitment. This includes being able to ask the right questions to understand their skills and experiences.\\n\\n5. Utilize analytics and reporting: Utilizing analytics and reporting can help you understand the effectiveness of your recruitment efforts and make adjustments if needed.\\n\\nBy following these tips, you can become a successful IT recruiter and help connect the right people with the right job opportunities.\",\n",
+       "  'https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-wmNNDQL3SCCrJhmNRQSPXBH9.png?st=2023-05-03T21%3A12%3A09Z&se=2023-05-03T23%3A12%3A09Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A14%3A24Z&ske=2023-05-04T13%3A14%3A24Z&sks=b&skv=2021-08-06&sig=EDExLl9Fc%2BBDtG1a4QFir%2BdauP4kFlRjgplpcFrkmGQ%3D'),\n",
+       " ('Success Story: How I Recruited the Right Talent for Yandex Ridetech',\n",
+       "  'When I joined Yandex Ridetech as an IT Recruiter, I was tasked with finding the right talent to help the company grow. I knew that this was going to be no easy task, as I was looking for senior-level IT professionals in different locations, with different skill sets.\\n\\nI started by creating job descriptions and advertisements and then launched a landing page and digest of vacancies to attract the right candidates. I also collaborated with hiring managers and interviewers to ensure that the recruitment process was efficient.\\n\\nI managed a team of 3 sourcers and a buddy for new colleagues, in addition to training interviewers and conducting team meetings. I also participated in HR analytics and C&B projects and organized HR brand activities, such as fast-track, one-day offer, cold-reference, and conferences.\\n\\nUltimately, I was successful in recruiting the right talent for Yandex Ridetech and I am proud of the work I have done. Not only did I find the right candidates for the job, but I also helped to streamline the recruitment process, making it more efficient and effective.',\n",
+       "  'https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-Xp52VsRlzLe7yXrX6QR6afFm.png?st=2023-05-03T21%3A12%3A16Z&se=2023-05-03T23%3A12%3A16Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T12%3A34%3A26Z&ske=2023-05-04T12%3A34%3A26Z&sks=b&skv=2021-08-06&sig=epulWNkzaF/53QN%2BUUawXFb78tCZWiD52TTbSct/8Y4%3D'),\n",
+       " ('Q&A: What Does an IT Recruiter Do?',\n",
+       "  'Are you curious about what an IT Recruiter does? Here’s a quick overview of the responsibilities and duties of an IT Recruiter. \\n\\nQ: What does an IT Recruiter do? \\n\\nA: An IT Recruiter is responsible for finding, interviewing, and hiring IT professionals. They work with employers to identify the right candidates for their IT positions, from entry-level to senior-level roles. They often manage the full recruitment process, from sourcing to interviewing and onboarding. They also provide guidance and training to hiring managers and interviewers, and use analytics to track recruitment progress. \\n\\nQ: What skills do IT Recruiters need? \\n\\nA: IT Recruiters need excellent communication, interpersonal, and organizational skills. They must be able to effectively manage the recruitment process and connect with potential candidates. They should also be familiar with the IT industry and have an understanding of the different roles and technologies involved. \\n\\nQ: What do IT Recruiters look for in a candidate? \\n\\nA: IT Recruiters look for candidates with the right technical skills and experience for the role, as well as the right attitude and personality. They should also have the ability to learn quickly and adapt to a new environment. \\n\\nQ: What is the job outlook for IT Recruiters? \\n\\nA: The job outlook for IT Recruiters is positive, as more companies are looking to fill IT positions. With the right skills and experience, IT Recruiters can expect to find plenty of job opportunities.',\n",
+       "  'https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-ou3M9t0CXt1bbmunaRx37Ee2.png?st=2023-05-03T21%3A12%3A23Z&se=2023-05-03T23%3A12%3A23Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A01%3A27Z&ske=2023-05-04T13%3A01%3A27Z&sks=b&skv=2021-08-06&sig=U3BsrJcDSEpN/CLvSoDNhGsQpjZbR04LbLjKrxG/ojM%3D'),\n",
+       " ('7 Tips to Help You Find the Best IT Talent',\n",
+       "  \"Finding the right IT talent can be a challenge, but it doesn't have to be. Here are 7 tips that can help you find the best IT talent: \\n\\n1. Define your needs: Before you start your search, make sure you know exactly what you need. Are you looking for a specific type of IT talent? Are there any qualifications or certifications required? Defining your needs upfront will help you find the right fit. \\n\\n2. Leverage your network: Your network can be an invaluable resource when it comes to finding the right IT talent. Reach out to your contacts and let them know what you’re looking for. You never know who might have the perfect candidate for the job.\\n\\n3. Utilize job boards: Job boards are a great way to reach a wide variety of potential candidates. Make sure your job posting is optimized for search engines so that the right people can find your listing.\\n\\n4. Use referrals: Ask current employees if they know anyone who might be a good fit for the position. You can also offer incentives to employees who refer candidates who get the job.\\n\\n5. Take advantage of social media: Social media is a great way to reach potential candidates. Post job listings on your company’s social media accounts and consider using targeted ads to reach the right people.\\n\\n6. Consider using a recruitment agency: Recruitment agencies can help you find the right IT talent quickly and efficiently. They have access to a wide range of candidates and can often provide insights and advice.\\n\\n7. Follow up: Once you’ve identified potential candidates, make sure to follow up with them in a timely manner. Responding quickly and professionally will help you stand out from the competition. \\n\\nFollowing these tips can help you find the best IT talent for your team. With the right strategy, you’ll be able to find the perfect candidate in no time.\",\n",
+       "  'https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-4047WuGkUxIOxNlpa7S7jdhX.png?st=2023-05-03T21%3A12%3A31Z&se=2023-05-03T23%3A12%3A31Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A16%3A29Z&ske=2023-05-04T13%3A16%3A29Z&sks=b&skv=2021-08-06&sig=EaAwHTdAlg6R5asdNbft%2B%2BgAsuf2f1xschmKDXzkKqQ%3D'),\n",
+       " ('The Future of Talent Acquisition is in IT Recruitment',\n",
+       "  'As the world continues to digitalize, industries across the globe are looking for ways to stay competitive and remain at the forefront of their respective markets. The demand for skilled IT professionals is growing rapidly, and it is becoming increasingly important for companies to have a dedicated IT recruitment team in place to identify, attract and retain the best talent. IT recruitment requires a specialized set of skills and knowledge, as well as an understanding of the ever-evolving technology landscape.\\nIT recruitment focuses on finding the right candidates who can bring the right skills, experience, and knowledge to the table. As technology continues to evolve, it is essential for companies to identify and hire the right IT professionals who can help them stay ahead of the competition. \\n\\nIn addition to finding the right IT professionals, IT recruiters also need to be able to identify potential cultural fits within the organization. As the IT landscape continues to evolve, companies need to ensure their IT teams are able to work together effectively and efficiently. By understanding the needs of the organization and the skills of the candidate, IT recruiters can ensure the right fit for the organization. \\n\\nFinally, IT recruitment teams must remain up to date on the latest trends in the industry. As technology continues to develop and evolve, it is important for recruiters to stay informed on the latest advancements and changes in the industry. By understanding the latest trends, recruiters can ensure they are able to identify and attract the most qualified candidates for the position. \\n\\nAs technology continues to evolve, the demand for skilled IT professionals is only going to continue to rise. Companies need to ensure they have a dedicated IT recruitment team in place to identify and attract the best talent. IT recruitment is the future of talent acquisition and it is essential for companies to remain competitive.',\n",
+       "  'https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-R7jfSixj3h80EivpdocyHvyp.png?st=2023-05-03T21%3A12%3A37Z&se=2023-05-03T23%3A12%3A37Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A17%3A36Z&ske=2023-05-04T13%3A17%3A36Z&sks=b&skv=2021-08-06&sig=dgTWVkg8lSk%2BQq/LNMgpdlkrw0M2SC0iuXUIA7UGk%2BA%3D')]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How to Become a Successful IT Recruiter\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-wmNNDQL3SCCrJhmNRQSPXBH9.png?st=2023-05-03T21%3A12%3A09Z&se=2023-05-03T23%3A12%3A09Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A14%3A24Z&ske=2023-05-04T13%3A14%3A24Z&sks=b&skv=2021-08-06&sig=EDExLl9Fc%2BBDtG1a4QFir%2BdauP4kFlRjgplpcFrkmGQ%3D\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success Story: How I Recruited the Right Talent for Yandex Ridetech\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-Xp52VsRlzLe7yXrX6QR6afFm.png?st=2023-05-03T21%3A12%3A16Z&se=2023-05-03T23%3A12%3A16Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T12%3A34%3A26Z&ske=2023-05-04T12%3A34%3A26Z&sks=b&skv=2021-08-06&sig=epulWNkzaF/53QN%2BUUawXFb78tCZWiD52TTbSct/8Y4%3D\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q&A: What Does an IT Recruiter Do?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-ou3M9t0CXt1bbmunaRx37Ee2.png?st=2023-05-03T21%3A12%3A23Z&se=2023-05-03T23%3A12%3A23Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A01%3A27Z&ske=2023-05-04T13%3A01%3A27Z&sks=b&skv=2021-08-06&sig=U3BsrJcDSEpN/CLvSoDNhGsQpjZbR04LbLjKrxG/ojM%3D\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 Tips to Help You Find the Best IT Talent\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-4047WuGkUxIOxNlpa7S7jdhX.png?st=2023-05-03T21%3A12%3A31Z&se=2023-05-03T23%3A12%3A31Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A16%3A29Z&ske=2023-05-04T13%3A16%3A29Z&sks=b&skv=2021-08-06&sig=EaAwHTdAlg6R5asdNbft%2B%2BgAsuf2f1xschmKDXzkKqQ%3D\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Future of Talent Acquisition is in IT Recruitment\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://oaidalleapiprodscus.blob.core.windows.net/private/org-nl83spq680gHebtBOH6GYK5h/user-2u08YCwPNJ3yB6vtn1PVgfMB/img-R7jfSixj3h80EivpdocyHvyp.png?st=2023-05-03T21%3A12%3A37Z&se=2023-05-03T23%3A12%3A37Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-03T13%3A17%3A36Z&ske=2023-05-04T13%3A17%3A36Z&sks=b&skv=2021-08-06&sig=dgTWVkg8lSk%2BQq/LNMgpdlkrw0M2SC0iuXUIA7UGk%2BA%3D\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython import display\n",
+    "\n",
+    "for h, b, i in images:\n",
+    "    print(h)\n",
+    "    display.display(display.Image(url=i))"
    ]
   },
   {
