Add comment generation

--- a/usage_example.ipynb
+++ b/usage_example.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Posts generation\n",
+    "\n",
+    "## Content plan generation and formatting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -157,6 +167,14 @@
    ],
    "source": [
     "kw"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Posts generation by content plan"
    ]
   },
   {
@@ -321,6 +339,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Illustration Generation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -473,6 +499,56 @@
     "for h, b, i in images:\n",
     "    print(h)\n",
     "    display.display(display.Image(url=i))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comments generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commentator_profession = 'Senior Software Engineer'\n",
+    "commentator_background = 'Yandex, 3 years, Python, SQL, C++, developed web-scale images not personalized content-based recommendation system using C++ MapReduce inhouse platform. Reduced calculation speed by 40%, added new source of candidates for recommendations, increased quality of recommendations by 20%'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nAnastasia, this is a great post! You have outlined some great tips that will be beneficial to anyone looking to become an IT recruiter. Your experience and knowledge in the IT industry is impressive, and your ability to develop effective sourcing strategies and utilize analytics and reporting will be a great asset to any organization. Well done!'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_topic = f\"title: {post_data[0][0]}, body: {post_data[0][1]}\"\n",
+    "comment_response = requests.post(\n",
+    "    \"http://localhost:5000/gen_comment\",\n",
+    "    json={\n",
+    "        \"topic\": _topic,\n",
+    "        \"author\": \"Anastasia K\",\n",
+    "        \"author_profession\": profession,\n",
+    "        \"author_background\": experience,\n",
+    "        \"commentator_profession\": commentator_profession,\n",
+    "        \"commentator_background\": commentator_background,\n",
+    "    },\n",
+    ")\n",
+    "comment_response.json()['response']"
    ]
   },
   {
